# TRNSYSAuto

./: .gitignore  Building.py  Convert_16_48.py  Convert_48_16.py  LeastSquareError.py  MPCModule.py  MPC_Python_V1.py  README.md  auswertung.py  classes.py  classes_mpc.py  configs.ini  environment.yml  functions.py  functions_mpc.py  main.py  main_mpc.py  pyproject.toml  requirements.txt  requirementsTRNSYS.txt  requirementsTRNSYSAuto.txt  schweiker_model.py  settings.ini  settings.py
Basisordner/: 09676000  Bruckverdichtet_3Zonen32cctest6PH_TABS2125dynspeicher2testimpuls2Nutzelvar_20200812starr_2225grad.dck  Bruckverdichtet_3Zonen32cctest6PH_TABS2125dynspeicher2testimpuls2Nutzelvar_20200812starr_2225gradGSC.dck  Bruckverdichtet_3Zonen32cctest6PH_TABS2125dynspeicher2testimpuls2Nutzelvar_20200812starr_2225gradGSC_4wo.dck  Bruckverdichtet_3Zonen32cctest6PH_TABS2125dynspeicher2testimpuls2Nutzelvar_20200812starr_2225gradGSC_MaxEner.dck  Building.b18  Building.dck  Einstellungen.xlsx  Lastprofil.txt  MPCModule.py  Simulationsvarianten.xlsx  Windetc20190804.txt  main_mpc.py  templateDck.dck  templateDck_Python.dck
TRNSYSAuto/: classes.py  configs.py  datalayer.py  evaluation.py  functions.py  gui.py  main.py  settings.py  simulation.py  utils.py
assets/: 1EF45810  46935640  B08AEC40  Qelww_CHR55025.txt  RunTRNEXE.bat  StrahlungBruck.txt  Test.dck  Windetc20190804.txt  configsMPC.ini  main_mpc.py  mpc_disabled.dck  mpc_enabled.dck  settingsMPC.ini  templateDck_2.dck  templateDck_3.dck  templateDck_3_mitMarker.dck  templateDck_Python.dck
docs/: TRNSYSAuto.rst  conf.py  (+2 more)
(+359 files in other folders)
