[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TRNSYSAuto"
version = "4.1.1"
description = ""
authors = [
    { name="Pierre Laurent", email="pierre.laurent@technikum-wien.at" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"altgraph>=0.17.4",
    "comtypes>=1.4.10",
    "et_xmlfile>=2.0.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pefile>=2023.2.7",
    "pip>=24.2",
    "pyinstaller>=6.12.0",
    "pyinstaller-hooks-contrib>=2025.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "pywin32>=308",
    "pywin32-ctypes>=0.2.3",
    "pywinauto>=0.6.9",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "tzdata>=2025.1",
    "wheel>=0.44.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]